--- a/style.css
+++ b/style.css
@@ -11,6 +11,12 @@ html, body {
   font-size: 16px; /* базовый размер шрифта */
 }
 
+@media (max-width: 600px) {
+  body {
+    font-size: 12px; /* уменьшаем шрифт для экранов <= 600px */
+  }
+}
+
 /* ЗАГРУЗОЧНЫЙ ЭКРАН */
 #overlayer { 
   width: 100%;
